# NeteaseCloudMusicApi

./: Cargo.toml  README.md
src/: main.rs
src/api/: activate_init_profile.rs  aijd_content_rcmd.rs  album.rs  album_detail.rs  album_detail_dynamic.rs  album_list.rs  album_list_style.rs  album_new.rs  album_newest.rs  album_privilege.rs  album_songsaleboard.rs  album_sub.rs  album_sublist.rs  api.rs  artist_album.rs  artist_desc.rs  artist_detail.rs  artist_detail_dynamic.rs  artist_fans.rs  artist_follow_count.rs  artist_list.rs  artist_mv.rs  artist_new_mv.rs  artist_new_song.rs  artist_songs.rs  artist_sub.rs  artist_sublist.rs  artist_top_song.rs  artist_video.rs  artists.rs  audio_match.rs  banner.rs  batch.rs  calendar.rs  captcha_sent.rs  captcha_verify.rs  cellphone_existence_check.rs  check_music.rs  cloud_import.rs  cloud_match.rs  (+302 more)
src/util/: cache.rs  crypto.rs  mod.rs  os.rs  request.rs  result.rs  text.rs
