[package]
name = "neteasecloudmusicapi-rust"
version = "0.1.0"
edition = "2021"

include = ["src/util/config.json"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "cookies", "gzip","native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }


rust-crypto = "0.2.36"
base64 = "0.22.1"
hex = "0.4.3"
thiserror = "2.0.3"
openssl = "0.10"


rand = "0.8.5"
regex = "1.11.1"
lazy_static = "1.5.0"



url = "2.5.4"
chrono = "0.4.38"
form_urlencoded = "1.2.1"


sled = "0.34"
md5 = "0.7.0"


actix-web = "4"
actix-rt = "2.5"
env_logger = "0.11.5"
log = "0.4"
cached = "0.54.0"
futures = "0.3.31"


qrcode = "0.14.1"